Small fix: icon also part of the link

--- a/src/app/shared/navigation/navigation.component.html
+++ b/src/app/shared/navigation/navigation.component.html
@@ -1,10 +1,4 @@
 <mat-nav-list>
-  <mat-list-item>
-    <mat-icon>list</mat-icon>
-    <a routerLink="/books">Book Overview</a>
-  </mat-list-item>
-  <mat-list-item>
-    <mat-icon>home</mat-icon>
-    <a routerLink="/home">Home</a>
-  </mat-list-item>
+  <a routerLink="/books" mat-list-item><mat-icon>list</mat-icon>&nbsp;Book Overview</a>
+  <a routerLink="/home" mat-list-item><mat-icon>home</mat-icon>&nbsp;Home</a>
 </mat-nav-list>
